<resources>
    <string name="app_name">QxGameSDKDemo</string>

    <string name="login">Login</string>
    <string name="query">Query</string>
    <string name="pay">Pay</string>
    <string name="change_password">ChangePassword</string>
    <string name="logout">Logout</string>
    <string name="share">Share(FaceBook)</string>
    <string name="invitation">Invitation(FaceBook)</string>
    <string name="fast_login">FastLogin</string>
    <string name="show_float">ShowFloat</string>
    <string name="dismiss_float">DismissFloat</string>
    <string name="authorize">授权</string>
    <string name="show_ad">广告</string>
    <string name="ad_vungle">ad_vungle</string>
    <string name="ad_admob">ad_admob</string>
    <string name="ad_qxun">ad_qxun</string>
    <string name="ad_mobvista">AD_MOBVISTA</string>
    <string name="qianxun_support_appkey">1c2f471fb9597efb8f1e0a551c610e0b</string>
    <string name="facebook_app_id">445939652961421</string>
    <string name="fb_login_protocol_scheme">fb445939652961421</string>

</resources>
